--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "airplay2-rs"
 version = "0.1.0"
-authors = ["Lucas McGartland <luke.mcgartland@me.com>"]
-edition = "2018"
+edition = "2021"
+license = "GPL-2.0"
+repository = "https://github.com/example/airplay2-sender"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
