--- a/crates/airplay-client/Cargo.toml
+++ b/crates/airplay-client/Cargo.toml
@@ -18,6 +18,8 @@ async-trait.workspace = true
 tracing.workspace = true
 uuid.workspace = true
 rand.workspace = true
+serde.workspace = true
+serde_json = "1.0"
 base64 = "0.22"
 
 [dev-dependencies]
