--- a/crates/airplay-crypto/Cargo.toml
+++ b/crates/airplay-crypto/Cargo.toml
@@ -19,6 +19,8 @@ curve25519-dalek.workspace = true
 chacha20poly1305.workspace = true
 aes.workspace = true
 cbc.workspace = true
+aes-gcm = "0.10"
+ctr = "0.9"
 sha2.workspace = true
 hkdf.workspace = true
 num-bigint.workspace = true
